# mecacell-examples

./: .gitignore  CMakeLists.txt
basic/: CMakeLists.txt  main.cpp  scenario.hpp
basic/src/: mainconsole.cpp  mainviewer.cpp
basic/src/core/: cell.h  scenario.hpp
